backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shopcart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: shopcart-backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: shopcart
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
