ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopcart-ingress
  namespace: shopcart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shopcart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
